Update PermgenSpaceDemo.java