@@ -1,5 +1,6 @@
+// PermgenSpaceDemo.java
 import java.util.*;
-
+// JVM Parameters: -XX:PermSize=2M -XX:MaxPermSize=5M
 public class PermgenSpaceDemo {
     public static void main(String args[]) {
         List<String> list = new ArrayList<>();
